--- a/docs/team/dandford.adoc
+++ b/docs/team/dandford.adoc
@@ -1,20 +1,15 @@
 = Dandford(Ong Ming Chung) - Project Portfolio
 :site-section: AboutUs
-:imagesDir: ../images
-:imagesDir:  ../images/user-guide-pictures
+:imagesDir:  ../images
 :stylesDir: ../stylesheets
 == PROJECT: GuiltTrip
-
 ---
-
-== Overview
+==== Overview
 
 Craving for a nice bowl of Mala but can’t seem to save up enough for it? guiltTrip() is the perfect platform for those
-*aspiring to be able to afford their Mala*, finally! More importantly, guiltTrip() is optimized for those who prefer to
-work with a Command Line Interface (CLI) while still having the benefits of a Graphical User Interface (GUI). If you can
-type fast, guiltTrip() can get your finance tracker tasks done faster than traditional GUI apps.
+*aspiring to be able to afford their Mala*, finally!
 
-== Summary of contributions
+==== Summary of contributions
 Data Presentation:
 
 * *Major enhancement*: added *Statistics Breakdown along with Categories*
@@ -30,7 +25,6 @@ to include allowing it to find for all fields of the entry.
 ** Justification: This feature improves the product as there is more Data Organization and the user can choose what data to see through find.
 ** Highlights: This feature involves sorting the exiting list of entries and filtering them, and hence requires an understanding of how the entries are saved to carry out calculation operations on them.
 
-
 * *Code contributed*: [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=dandford&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false[Functional code]]
 
 * *Other contributions*:
@@ -38,171 +32,118 @@ to include allowing it to find for all fields of the entry.
 ** Project management:
 *** Managed releases `v1.1` - `v1.4rc` (3 releases) on GitHub
 *** Assign tasks and issues to team members.
+*** Managed issues related to *Statistics* and *Categories*
 ** Enhancements to existing features:
-*** Wrote additional tests for existing features to increase coverage from 8% to 25%
+*** Wrote additional tests for basic features and Statistics to increase coverage from 8% to 25%: https://github.com/AY1920S1-CS2103-T16-4/main/pull/268[#268], https://github.com/AY1920S1-CS2103-T16-4/main/pull/272[#272], https://github.com/AY1920S1-CS2103-T16-4/main/pull/277[#277]
 ** Documentation:
-*** Did cosmetic tweaks to existing contents of the User Guide
+*** Standardized the User Guide and Developer's Guide
 *** Designed the layout for User Guide(Pictures)
 ** Community:
-*** Set up the basic structure for the project. (Creation of expenses classes):https://github.com/AY1920S1-CS2103-T16-4/main/pull/67
+*** Set up the basic structure for the project. (Creation of expenses classes):https://github.com/AY1920S1-CS2103-T16-4/main/pull/67 [#67]
 *** Reported bugs and suggestions for other teams in the class (examples:  https://github.com[1], https://github.com[2], https://github.com[3])
-** Tools:
 
 
-== Contributions to the User Guide
-
-=== Categories
-Ever feel like your list of expenses are extremely messy? This is where categories come in handy! Every entry belongs to one category, which makes it easier for you to organize your data! Categories can be either grouped under Expense or Income.
-GuiltTrip comes with a default set of Categories as listed below. All entries must have a category.
-
-* Income: `Business,Salary,Gifts,Loans`
-* Expense: `Food,Travel,Family,Bills,Entertainment,Transport,Shopping,HealthCare,Groceries,Rent`
-
-Categories for Expense, Budget and Wish all belong under the Expense Category. Categories for Income belong under the Income Category.
-An example would be when creating a new Budget, the category that the budget was created must belong to one of the existing categories in Expense.
-
-==== Adding Category : `addCategory`
-If the default set of categories does not cover your needs, you can add more by calling addCategory.
-
-Adds a new Category for either Income or Expense. The category added must not currently exist in the application.
-Category names are case-insensitive.
-
-Format: `addCategory cat/<category type> n/<category name>`
-
-* `<category type>`: The type of Category that the new addition is under.
-* `<category name>`: The name of the new Category.
-
-Example Usage:
-[start = 1]
-. If you want to add a new category *CodingServices* under Income, enter the command `addCategory cat/Income n/CodingServices`
-+
-image::addingCategory-1.png[]
-
-. The new category will thus be added to guiltTrip. You can verify it using `listCategories`.
-+
-image::addingCategory-2.png[]
-
-Other Examples:
-
-* `addCategory cat/Expense n/Transport`
-* `addCategory cat/Income n/Lottery`
-
-===== Editing Category : `editCategory`
-Edits a current category's description. The category to be edited must exist in the current list of Categories
-whether it be in the Expense CategoryList or the Income CategoryList. The new name for the category must not be a
-duplicate of existing categories.
-
-Format: `editCategory cat/<category type> o/<old category name> n/<new category name>`
-
-* `<category type>`: The type of Category that the edited Category is under.
-* `<old category name>`: The original name of this Category.
-* `<new category name>`: The new name of this Category.
-
-Example Usage:
-[start = 1]
-. If you would like to edit an existing Category *Business* to *Bursary* under Income, enter the command `editCategory cat/Income o/Business n/Bursary`.
-+
-image::editingCategory-1.png[]
-
-. The old category will thus be edited in guiltTrip. All existing entries will also be renamed as shown below.
-+
-image::editingCategory-2.png[]
-
-Other Examples:
-
-* `editCategory cat/Income o/Business n/HotelManagement`
-* `editCategory cat/Expense o/Family n/Pets`
-
-==== Listing Categories : `listCategories`
-
-Lists all the current categories the user has.
-
-Format: `listCategories`
-
-Example: `listCategories`
-
-==== Deleting Category : `deleteCategory`
-Deletes a category from guiltTrip. The category that is deleted should not have any entries under it. It must also already exist in guiltTrip.
-
-Format: `deleteCategory cat/<category type> n/<category name>`
-
-* `<category type>`: The type of Category that the deleted Category is under.
-* `<category name>`: The name of the deleted Category.
-
-Example Usage:
-[start = 1]
-. If you would like to remove an existing Category *Rent* under Expense, type `deleteCategory cat/Expense n/Rent`
-+
-image::deletingCategory-1.png[]
-
-. The old category will thus be deleted from guiltTrip. You can verify that it is removed using `listCategories`.
-+
-image::deletingCategory-2.png[]
-
-Other Examples:
-
-* `deleteCategory cat/Income n/Business`
-* `deleteCategory cat/Expense n/Food`
-
-=== Expenses
-Want to feel guiltTripped by your one Mala and Bubble Tea per day? GulitTrip's main function is thus used to record your sinful expenses and income.
-
-==== Adding Expense: `addExpense`
-Adds a new expenditure to your total spending.
-Inputs can be arranged in a different order. Tag may be omitted from the expenditure record. Category must already exist
-in the list of categories. Amount must be larger than 0 and positive. Amount should also not be larger than 9999999.99.
-
-Format: `addExpense cat/<category> n/<description> a/<expenditure> d/<date> [tg/<tag>]`
-
-* `<category name>`: The `category` that the expense belongs to.
-* `<description>`: The name of this expense.
-* `<expenditure>`: The amount spent for this expense. It can contain at most 2 decimal points.
-* `<date>`: The date of this expense.
-* `<tag>`: Optional tags for this expense. The tag must not have spaces and most only be alphanumeric.
-
-Example Usage:
-[start = 1]
-. If you would like to add a record of a recent splurging on mala, key in the command  `addExpense cat/Food typ/Expense n/Mala amt/5.50 d/2019 11 09 tg/food tg/indulgence` .
-+
-image::addingExpense-1.png[]
-
-. You should see the new expense being added into in the list of entries as displayed below.
-+
-image::addingExpense-2.png[]
-
-Other examples:
-
-* `addExpense c/Gifts typ/Expense n/Rubber Duck for Yee Jian a/55 d/2019 11 09 tg/sanity check`
-* `addExpense c/Travel typ/Expense n/Travel To Alaska a/550000 d/2019 09 09`
-
-==== Adding Income : `addIncome`
-Adds a new Income to your total income.
-Inputs can be arranged in a different order. Tag may be omitted from the expenditure record. Category must already exist in the list of category.  Amount must be larger than 0 and positive. Amount should also not be larger than 9999999.99.
-
-Format: `addIncome/<category name> n/<description> a/<expenditure> d/<date> [t/<tag>]`
-
-* `<category name>`: The `category` that the entry belongs to.
-* `<description>`: The name of this entry.
-* `<expenditure>`: The amount spent for this income. It can contain at most 2 decimal points.
-* `<date>`: The date of this income.
-* `<tag>`: Optional tags for this income. The tag must not have spaces and must only be alphanumeric.
-
-Example Usage:
-[start = 1]
-. If you would like to add a recent Income from a bursary, key in the command  `add cat/Gifts typ/Income n/Bursary amt/5000 d/2019 11 09 tg/reward for studying` .
-. You should see the new income being added into in the list of entries as displayed below.
-
-Other examples:
-
-* `add c/Gifts typ/Income n/Durian a/200.00 d/2019 09 09 tg/food`
-* `add c/Business typ/Income n/business Trip To Mars a/20000.00 d/2019 09 09`
 |===
 |_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
 |===
 
-include::../UserGuide.adoc
+=== Contributions to the User Guide
 
-include::../UserGuide.adoc
+=== Categories
+Categories allow for organization of data, and improves the breakdown of information for statistics.
+For more information visit: https://github.com/AY1920S1-CS2103-T16-4/main/blob/master/docs/UserGuide.adoc#31-categories
+
+=== Statistics
+
+==== Switching to Statistics Table View : `viewTable`
+Switches to the statistics table view. By default, `viewTable` will show the current month statistics.
+Typing only the month in format *[yyyy-mm]* will show the breakdown of statistics by the specified month.
+Carrying out any other Adding, Editing, Or Deleting Expense or Income command in the Statistics Table
+screen will reset the Table to show the month of statistics that reflects the command carried out.
+
+Format: `viewTable [p/<RangeOfMonths>]`
+
+* `<RangeOfMonths>`: The dates that you would like to display the statistics by. If you are interested in a range of months, you have to make sure that the *startMonth* and *endMonth* is separated by a comma, `,`. If you're only interested in one month, specify the month in the format `yyyy/MM`
+
+Example Usage:
+
+[start = 1]
+. Let's say you want to view the Statistics in table form for period *2018/01* to *2019/12*. You then type in the command `viewTable p/2018-01,2019-12`.
++
+image::viewTable-1.png[width=50%]
+
+. GuiltTrip will display to you the statistics for this period of time broken down in table form as shown below.
++
+image::viewTable-2.png[width=50%]
+
+Other Examples:
+
+* `viewTable p/2018-09`
+* `viewTable`
+
+==== Switching to Statistics Pie Chart View : `viewPie`
+Switches to the statistics table view. By default, `viewPie` will show the current month statistics.
+Typing only the month in format *[yyyy-mm]* will show the breakdown of statistics by the specified month.
+Carrying out any other Adding, Editing, Or Deleting Expense or Income command in the Statistics Table
+screen will reset the Table to show the month of statistics that reflects the command carried out.
+The statistics by percentage will be rounded to the nearest 1 decimal place so as not to clutter the UI.
+
+Format: `viewPie [p/<RangeOfMonths>]`
+
+* `<RangeOfMonths>`: The dates that you would like to display the statistics by. If you are interested in a range of months, you have to make sure that the *startMonth* and *endMonth* is separated by a comma, `,`.
+
+Example Usage:
+[start = 1]
+. Let's say you want to view the Statistics in pie chart form for period *2018/01* to *2019/12*. You then type in the command `viewPie p/2018-01,2019-12`.
++
+image::ViewPie-1.png[width=50%]
+
+. GuiltTrip will display to you the statistics for this period of time broken down in pie chart form as shown below.
++
+image::viewPie-2.png[width=50%]
+
+[NOTE]
+If the data category percentage is too small, it could be rounded off to 0.0% and
+there is a likelihood that it'll be hard to see the portion of that category in the pie chart.
+
+Other Examples:
+
+* `viewPie p/2018-09`
+* `viewPie`
+
+==== Switching to Statistics Bar Chart View : `viewBar`
+Switches to the statistics table view. By default, `viewBar` will show the current month statistics.
+Typing only the month in format *[yyyy-mm]* will show the breakdown of statistics by day by the specified month.
+Carrying out any other command in the Statistics Bar Chart screen will reset the Bar Chart to show the current month
+statistics for convenience of the user.
+
+[NOTE]
+As the bar chart is auto scaling to reflect the accuracy of the y-axis , if there is too large an expense for one day, it will be hard to see
+the amounts for other days.
+
+Format: `viewBar [p/<SpecifiedMonth>]`
+
+* `<SpecifiedMonth>`: The month and year in which you want to display the data by. It must be in the format `[yyyy mm]` with no dates and does not allow a range of months.
+
+Example Usage:
+
+[start = 1]
+. Let's say you want to view the Statistics in bar chart form for period *2019/10*. You then type in the command `viewBar p/2019-10`.
++
+image::viewBar-1.png[width=50%]
+
+. GuiltTrip will display to you the statistics for this period of time broken down in table form as shown below.
++
+image::viewBar-2.png[width=50%]
+
+Other Examples:
+
+* `viewBar p/2018-09`
+* `viewBar`
+
+=== Sorting and Finding
+Sorting allows the user to organize GuiltTrip to sort what he wants to see. For more information visit: https://github.com/AY1920S1-CS2103-T16-4/main/blob/master/docs/UserGuide.adoc#31-categories
+Finding allows the user to organize GuiltTrip to filter out what he wants to see.
 
 == Contributions to the Developer Guide
 
@@ -210,11 +151,7 @@ include::../UserGuide.adoc
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=Categories]
-
-
-== PROJECT: PowerPointLabs
-
----
-
-_{Optionally, you may include other projects in your portfolio.}_
+==== Categories
+As the section for Categories is too huge, I included a small section on editingCategories command function.
+include::../DeveloperGuide.adoc[tag=EditingCategories]
+include::../DeveloperGuide.adoc[tag=Statistics]
